<resources>
    <string name="app_name">HMI</string>
    <string name="action_settings">Settings</string>
    <string name="action_layouts">Layouts</string>
    <string name="action_taeschung">Optische Täuschungen</string>
    <string name="action_menu">Menüs</string>
    <string name="action_dialog">Dialoge</string>
    <string name="action_widget">Widgets</string>
    <string name="action_voice">Voice</string>
    <string name="action_sensor">Sensoren</string>
    <string name="action_input">Eingabe</string>
    <string name="action_games">Games</string>
    <string name="section_format">Section: %1$d selected</string>
    <string name="switcher">Switch</string>
    <string name="switch_full_little">Scroll / Spinner:</string>
    <string name="switch_little_full">Spinner / Scroll:</string>
    <string name="apply">Übernehmen</string>
    <string name="input_text">Text</string>
    <string name="input_password">Password</string>
    <string name="input_email">E-Mail</string>
    <string name="input_number">Zahlen</string>
    <string name="input_phone">Telefonnummer</string>
    <string name="input_uri">Text URI</string>
    <string name="abc">AaBbCc</string>
    <string name="absolute">Absolut:</string>
    <string name="relative">Relativ:</string>
    <string name="changeImage">Bild wechseln</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Neustart</string>
    <string name="type_accelerometer">X: %1$s m/s^2\nY: %2$s m/s^2\nZ: %3$s m/s^2</string>
    <string name="type_gyro">X: %1$s rad/s\nY: %2$s rad/s\nZ: %3$s rad/s</string>
    <string name="type_light">%1$s lx</string>
    <string name="type_magnetic">X: %1$s μT Y: %2$s μT Z: %3$s μT</string>
    <string name="type_orientation">%1$s °Grad</string>
    <string name="button_Acceleration">Beschleunigung</string>
    <string name="button_brightness">Helligkeit</string>
    <string name="button_Gravity">Schwerkraft</string>
    <string name="button_Gyroscope">Gyroskop</string>
    <string name="button_Geomagnetic">Erdmagnetfeldsensor</string>
    <string name="button_AlertDialog">AlertDialog</string>
    <string name="button_DatePicker">DatePickerDialog</string>
    <string name="button_TimePicker">TimePickerDialog</string>
    <string name="button_Game_Timing">Spiel mit Zeit</string>
    <string name="button_Game_Dots">Spiel mit Punkten</string>
    <string name="button_Game_Objects_Analog">Spiel mit Analoger Steuerung</string>
    <string name="button_Game_Objects_Touch">Spiel mit Touch Steuerung</string>
    <string name="button_Game_Accelelerometer">Spiel mit Beschleunigungs-\nsensor</string>
    <string name="button_Game_Kugel">Kugel ins Loch</string>
    <string name="button_Game_Koffer">Ich packe meinen Koffer</string>
    <string name="widget_hint">Klasse des Widgets:</string>
    <string name="all_sensors">Sensoren:%1$s</string>
    <string name="connected">Verbundene Elemente</string>
    <string name="syncContacts">Syncronisiere Kontakte</string>
    <string name="syncCalendar">Syncronisiere Kalendar</string>
    <string name="attending">Teilnahme?</string>
    <string name="yes">Ja</string>
    <string name="maybe">Vielleicht</string>
    <string name="no">Nein</string>
    <string name="sound">Lautstärke</string>
    <string name="soundon">Sound</string>
    <string name="soundoff">Silent</string>
    <string name="vibration">Vibration</string>
    <string name="togglebutton">Toggle Button</string>
    <string name="button_checkbox">Checkbox</string>
    <string name="button_radiobutton">Radio Button</string>
    <string name="button_faq">FAQ</string>
    <string name="button_time">Zeit ansagen</string>
    <string name="button_startvoice">Spracherkennung starten</string>
    <string name="button_texttospeech">Text-to-Speech</string>
    <string name="button_textfield">Textfelder</string>
    <string name="textinput">Auszugebenden Text eingeben</string>
    <string name="noTTS">Sprackerkennung nicht verfügbar!</string>
    <string name="prompt">Spracherkennung: Sagen Sie etwas</string>
    <string name="button">Button</string>
    <string name="button_icon">Button mit Icon</string>
    <string name="button_borderless">Button ohne Rand</string>
    <string name="button_custom">Custom Button</string>
    <string name="button_custom_xml">Custom Button (xml)</string>
    <string name="button_custom_png">Custom Button (png)</string>
    <string name="button_rotate">Rotate Button (xml)</string>
    <string name="imagebutton">ImageButton</string>
    <string name="button_context">Tippen und halten (Kontextmenü)</string>
    <string name="item1">Menüeintrag #1</string>
    <string name="item2">Menüeintrag #2</string>
    <string name="item3">Menüeintrag #3</string>
    <string name="faqLayout">Die Layout Klassen dienen zur Anordnung von Steuerelementen. Die verschiedenen Layouts können beliebig geschachtelt werden. Beim erzeugen der Benutzerschnittstelle wird zur Laufzeit aus der Layout XML Datei eine Java Klasse erstellt.</string>
    <string name="faqLinear">Ordnet die eingebetteten Steuerelemente entweder horizontal oder vertikal an. Die Ausrichtung wird über den XML Parameter android:orientation festgelegt.</string>
    <string name="faqRelative">Positioniert die eingebetteten Steuerelemente relativ zueinander (Bildschirmrand, zu sich selbst, View). Die Relation zueinander wird mit folgenden Parametern beeinflusst:\nandroid:layout_\nabove, below, toLeftOf, toRightOf, alignLeft, alignTop, alignRight, alignBottom.</string>
    <string name="faqTable">Ähnelt einer Tabelle und gruppiert die eingebetteten Steuerelemente innerhalb der Elemente vom Typ TableRow. Mittels den Parametern android:layout_width und android:layout_weight kann die Größe der Steuerelemente relativ zueinander festgelegt werden.</string>
    <string name="faqGrid">Die eingebetteten Elemente werden auf einem Raster positioniert, wobei sich ein Steuerelement über mehrere Zeilen und Spalten erstrecken kann.</string>
    <string name="faqFrame">Die eingebetteten Elemente werden übereinander angezeigt. Im Programmcode können dann verschiedene Steuerelemente abhängig von der Benutzereingabe angezeigt oder ausgeblendet werden.</string>
    <string name="faqList">Mit einem ListView lassen sich große und komplexe Listen sehr effizient und benutzerfreundlich darstellen Die Listen sind scrollbar und registrieren Benutzereingaben. Die Listeneinträge werden automatisch in die Liste mit einem Adapter eingefügt. Die Inhalte werden aus einer Quelle wie einem Array oder einer Datenbank bezogen.</string>
    <string name="faqAbsolute">Definiert genaue Standorte (x/y Koordinaten) für die Steuerelemente. Solche Layouts sind weniger flexibel und schwer zu warten und an verschiedene Bildschirmauflösungen und größen anzupassen.</string>
    <string name="info">HMI Projekt WS15/16 FRA-UAS\nDiese Android Application soll anhand von Android <br>Human Machine Interface</br> möglichkeiten zeigen.\nProgrammiert von Marcel Klamm</string>
    <string name="faqDialog">Wenn der Benutzer ein Dialog anklickt, öffnet sich ein kleines Fenster mit einem Titel und einer Message oder optional mit Schaltflächen wie Eingabefeldern usw.\n Solche modalen Dialoge werden über der aktuellen Activity angezeigt. Sie erhalten den Fokus und nehmen alle Eingaben entgegen, der Anwender wird also in seiner Tätigkeit unterbrochen.\n"Toasts" sind Kurznachrichten für den Benutzer. Diese Kurznachricht schwebt quasi über der normalen Applikations-View und kann keinen Fokus erlangen. Bei der Anzeige eines Toasts ist es völlig egal, was der Benutzer gerade macht, der Toast wird in jedem Fall angezeigt. Die Idee dahinter ist, den Benutzer so wenig wie möglich zu stören, ihm aber die im Toast enthaltene Information jedenfalls zu präsentieren.</string>
    <string name="faqMenu">Menüs präsentieren dem Benutzer Funktionen bzw. Aktionen, die er zu einem bestimmten Zeitpunkt ausführen kann. Klassische Desktop-Systeme kennen neben einer Menüleiste sogenannte Kontextmenüs, die nach dem Anklicken eines Objekts mit der rechten Maustaste geöffnet werden.</string>
    <string name="faqSensor">Android-Geräte enthalten zahlreiche Sensoren. Diese lassen sich mit geringem Aufwand in eigenen Apps nutzen. Beispiele:\nAbschalten des Bildschirmes beim Telefonieren, Darstellung auf dem Bildschirm passt sich der Ausrichtung an, Spiele reagieren auf Bewegungsänderungen, Karten-Apps erkennen automatisch den Standort uvm.</string>
    <string name="faqInput">Checkboxen sind eine Gruppe von ankreuzbaren Kontrollfeldern, bei denen der Anwender keine, eine oder mehrere auswählen kann.\nRadio-Buttons sind eine Gruppe von beschrifteten Knöpfen, von denen der Anwender einen auswählen kann. Es kann immer nur einer ausgewählt sein.\nToggle-Buttons erlauben den Nutzer Einstellungen zwischen zwei Zuständen (Ein und Aus) zu schalten.\nSpinner bieten eine schnelle Möglichkeit einen Wert aus einer Menge zu wählen. In der Grundeinstellung zeigt ein Spinner den aktuell ausgewählten Wert. Beim Berühren zeigt sich ein Dropdown-Menü mit allen anderen verfügbaren Werte, aus denen der Benutzer eine neue auswählen kann.</string>
    <string name="faqKontextMenu">Android kennt das von Desktop-Systemen bekannte Konzept der Kontextmenüs. Anstelle der rechten Maustaste löst das lange Antippen (Tippen und Halten) eines Elements das Menü aus.</string>
    <string name="faqGameTiming">Das Spiel zeigt eine zufällig gewählte Zeit im Intervall von 0 und 10 Sekunden an.\nDer Benutzer muss zweimal auf den Button drücken und versuchen die Zeit rechtzeitig zu stoppen:\n-Der erste Klick startet den Zähler\n-Der zweite Klick beendet den Zähler\nDas Spiel gibt die Absolute und Relative differenz verglichen mit der zufällig gewählten Zeit.\nNeuer Verusch beim klicken auf Start mit der selben Zeit oder Restart für eine neue Zeit.</string>
    <string name="faqGameDots">Game with Dots:\nVerschiedene Objekte erscheinen an zufälligen Stellen und dein Ziel ist es, das richtige Objekt anzuklicken. Sieh am oberen Bildschirmrand, welches Objeckt mit welcher Farbe gesucht wird!\nObere Linke Ecke: Punkte\nObere Rechte Ecke: Runden\nObere Mitte: Hinweis\nUntere Mitte: Countdown\nUntere Rechte Ecke: Highscore</string>
    <string name="to">An</string>
    <string name="subject">Thema</string>
    <string name="message">Nachricht</string>
    <string name="send">Senden</string>
    <string name="vertical">Vertikal</string>
    <string name="horizontal">Horizontal</string>
    <string name="linearlayout">Linear Layout</string>
    <string name="relativelayout">Relative Layout</string>
    <string name="tablelayout">Table Layout</string>
    <string name="listview">List View</string>
    <string name="gridelayout">Grid Layout</string>
    <string name="framelayout">Frame Layout</string>
    <string name="absolutelayout">Absolute Layout</string>
    <string name="swipeviewlayout">Swipe View</string>
    <string name="actionbartabs">Action Bar tabs</string>
    <string name="navigationdrawer">Navigation Drawer</string>
    <string name="element1">1. Element</string>
    <string name="element2">2. Element</string>
    <string name="element3">3. Element</string>
    <string name="element4">4. Element</string>
</resources>