<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:text="@string/horizontal"
        android:textSize="@dimen/table_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@color/button_light"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:text="@string/element1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/element2"
            android:background="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/element3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/element4"
            android:background="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>


    <TextView
        android:text="@string/vertical"
        android:textSize="@dimen/table_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@color/back_light"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:text="@string/element1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/element2"
            android:background="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/element3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/element4"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingRight="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/message" />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>