<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top">

    <Button
        android:id="@+id/buttonBeschleunigung"
        android:text="@string/button_Acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonHelligkeit"
        android:text="@string/button_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonErdmagnet"
        android:text="@string/button_Geomagnetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSchwerkraft"
        android:text="@string/button_Gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonGyroskop"
        android:text="@string/button_Gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textviewAllSensor"
        android:text="@string/all_sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"> <!--  300px -->

    <TextView
        android:id="@+id/textviewSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>