<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:text="@string/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radiogroupSound"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radiobuttonSound"
            android:text="@string/soundon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radiobuttonSilent"
            android:text="@string/soundoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radiobuttonVibration"
            android:text="@string/vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/textviewSound"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_action_bar_content_inset_material"
        android:layout_margin="@dimen/abc_action_bar_content_inset_material"
        android:gravity="center" />

    <TextView
        android:text="@string/attending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radiogroupAttending"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material">

        <RadioButton
            android:id="@+id/radiobuttonYes"
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radiobuttonMaybe"
            android:text="@string/maybe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radiobuttonNo"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/textviewAttending"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_action_bar_content_inset_material"
        android:layout_margin="@dimen/abc_action_bar_content_inset_material"
        android:gravity="center" />

</LinearLayout>