<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow>
        <Button
            android:text="@string/element1"
            />
        <TextView
            android:text="@string/element2"
            />
        <Button
            android:text="@string/element3"
            />
        <TextView
            android:text="@string/element4"
            />
    </TableRow>

    <TableRow>
        <Button
            android:text="@string/element1"
            android:layout_weight="2"
            />
        <TextView
            android:text="@string/element2"
            />
        <Button
            android:text="@string/element3"
            />
    </TableRow>

    <Button
        android:text="@string/element1"
        />

    <TableRow>
        <Button
            android:text="@string/element1"
            />
    </TableRow>

    <TableRow>
        <TextView

            />
        <Button
            android:text="@string/element2"
            />
    </TableRow>

    <TableRow>
        <TextView

            />
        <TextView

            />
        <Button
            android:text="@string/element3"
            />
    </TableRow>

</TableLayout>