<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/buttonButton"
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/abc_action_bar_content_inset_material" />

    <Button
        android:id="@+id/buttonEdittext"
        android:text="@string/button_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/abc_action_bar_content_inset_material" />

    <Button
        android:id="@+id/buttonCheckbox"
        android:text="@string/button_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/abc_action_bar_content_inset_material" />

    <Button
        android:id="@+id/buttonRadiobutton"
        android:text="@string/button_radiobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/abc_action_bar_content_inset_material" />
</LinearLayout>