<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/connected"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_action_bar_content_inset_material" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/abc_action_bar_content_inset_material"
        android:paddingRight="@dimen/abc_action_bar_content_inset_material"
        android:paddingBottom="@dimen/abc_action_bar_content_inset_material">

        <Switch
            android:id="@+id/switch1"
            android:text="@string/switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkboxconnected1"
            android:text="@string/abc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/checkboxconnected2"
            android:text="@string/abc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:text="@string/button_checkbox"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_action_bar_content_inset_material" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:text="@string/syncContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:text="@string/syncCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked" />

    <TextView
        android:text="@string/togglebutton"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/abc_action_bar_content_inset_material" />

    <TextView
        android:text="@string/syncContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material" />

    <ToggleButton
        android:id="@+id/tooglebutton1"
        android:text="@string/syncContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material" />

    <TextView
        android:text="@string/syncCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material" />

    <ToggleButton
        android:id="@+id/tooglebutton2"
        android:text="@string/syncContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material" />

    <Spinner
        android:id="@+id/spinnerPlanets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material">
    </Spinner>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonQuestion"
            android:src="@android:drawable/ic_menu_help"
            android:contentDescription="@string/button_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>